# rigidcorrespondences

./: CMakeLists.txt  README.md  RigidCorrespondences.cxx  icp.cxx
